--- a/app/src/main/res/layout/activity_onecontact.xml
+++ b/app/src/main/res/layout/activity_onecontact.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="viewModel" type="com.example.contacts.presentation.onecontact.OneContactViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".presentation.onecontact.OneContactActivity">
+            android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
                 android:layout_width="0dp"
@@ -19,13 +18,13 @@
                 android:id="@+id/one_contact_toolbar" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
         <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/one_contact_toolbar"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp"
-                app:cardCornerRadius="70dp"
+                app:cardCornerRadius="50dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/second_name_edit_view">
@@ -48,16 +47,18 @@
                 android:layout_height="wrap_content" android:id="@+id/guideline2"
                 app:layout_constraintGuide_percent="0.33"/>
         <EditText
+                android:text="@{viewModel.phoneText}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="phone"
                 android:ems="10"
-                android:id="@+id/phone_edit_text" android:layout_marginStart="16dp"
+                android:id="@+id/phone_edit_text"
+                android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline" android:hint="@string/hint_phone"/>
         <EditText
-                android:text="@={viewModel.firstName}"
+                android:text="@{viewModel.firstNameText}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
@@ -69,7 +70,7 @@
                 android:hint="@string/hint_first_name" android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/one_contact_toolbar"/>
         <EditText
-                android:text="@={viewModel.secondName}"
+                android:text="@{viewModel.secondNameText}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
@@ -94,7 +95,7 @@
                     android:layout_height="wrap_content" android:id="@+id/ringtone_select">
 
                 <TextView
-                        android:text="@={viewModel.ringtone}"
+                        android:text="@{viewModel.ringtoneText}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/ringtone_text_view"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +128,7 @@
                     android:layout_height="wrap_content" android:id="@+id/note_select">
 
                 <TextView
-                        android:text="@={viewModel.note}"
+                        android:text="@{viewModel.noteText}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
@@ -149,6 +150,13 @@
             <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp" android:id="@+id/view4" android:background="@color/colorTextDark"/>
+            <Button
+                    android:text="@string/delete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    app:goneUnless="@{viewModel.isExistingContact}"
+            />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
