--- a/app/src/main/res/layout/note_dialog.xml
+++ b/app/src/main/res/layout/note_dialog.xml
@@ -5,6 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <EditText
+            android:layout_margin="16dp"
             android:id="@+id/note_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
