--- a/app/src/main/res/layout/activity_onecontact.xml
+++ b/app/src/main/res/layout/activity_onecontact.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="viewModel" type="com.example.contacts.presentation.onecontact.OneContactViewModel"/>
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-                                                       android:layout_height="match_parent">
-        <Button
-                android:text="@string/delete"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/delete_button"
-                style="@style/Widget.AppCompat.Button.Colored"
-                app:goneUnless="@{viewModel.isExistingContact}"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
         <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                     android:id="@+id/scrollView2">
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                <Button
+                        android:text="@string/delete"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/delete_button"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        app:goneUnless="@{viewModel.isExistingContact}"
+                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/bottom_part" android:layout_marginTop="8dp"
+                        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
                 <androidx.appcompat.widget.Toolbar
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -61,7 +58,7 @@
                         android:layout_height="wrap_content" android:id="@+id/guideline2"
                         app:layout_constraintGuide_percent="0.33"/>
                 <EditText
-                        android:text="@{viewModel.phoneText}"
+                        android:text="@={viewModel.phoneText}"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:inputType="phone"
@@ -72,7 +69,7 @@
                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                         app:layout_constraintBottom_toTopOf="@+id/guideline" android:hint="@string/hint_phone"/>
                 <EditText
-                        android:text="@{viewModel.firstNameText}"
+                        android:text="@={viewModel.firstNameText}"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
@@ -84,7 +81,7 @@
                         android:hint="@string/hint_first_name" android:layout_marginTop="16dp"
                         app:layout_constraintTop_toBottomOf="@+id/one_contact_toolbar"/>
                 <EditText
-                        android:text="@{viewModel.secondNameText}"
+                        android:text="@={viewModel.secondNameText}"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:inputType="textPersonName"
@@ -112,7 +109,7 @@
                             android:layout_height="wrap_content" android:id="@+id/ringtone_select">
 
                         <TextView
-                                android:text="@{viewModel.ringtoneText}"
+                                android:text="@={viewModel.ringtoneText}"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content" android:id="@+id/ringtone_text_view"
                                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +145,7 @@
                             android:layout_height="wrap_content" android:id="@+id/note_select">
 
                         <TextView
-                                android:text="@{viewModel.noteText}"
+                                android:text="@={viewModel.noteText}"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:maxLines="1"
@@ -175,5 +172,4 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
