--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,38 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/bottom_sheet_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
+
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:padding="4dp">
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" app:srcCompat="@drawable/ic_photo_camera_black_24dp"
-                android:id="@+id/imageView2" android:layout_marginStart="16dp"/>
+            android:layout_height="wrap_content"
+            android:padding="4dp">
         <TextView
+                android:drawableStart="@drawable/ic_photo_camera_black_24dp"
                 android:text="@string/take_a_photo"
                 android:id="@+id/take_photo"
                 android:padding="16dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:drawablePadding="8dp"/>
     </LinearLayout>
+
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:padding="4dp">
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" app:srcCompat="@drawable/ic_collections_black_24dp"
-                android:id="@+id/imageView3" android:layout_marginStart="16dp"/>
         <TextView
+                android:drawableStart="@drawable/ic_collections_black_24dp"
+                android:drawablePadding="8dp"
                 android:text="@string/choose_photo"
                 android:padding="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/choose_photo"/>
     </LinearLayout>
+
 </LinearLayout>
