--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E0F2F1</color>
+    <color name="colorPrimary">#E3E7E7</color>
     <color name="colorPrimaryDark">#8B9695</color>
     <color name="colorAccent">#74867C</color>
     <color name="colorTextDark">#F21D1D1D</color>
+    <color name="colorWarning">#E4971111</color>
 </resources>
