--- a/app/src/main/res/layout/activity_onecontact.xml
+++ b/app/src/main/res/layout/activity_onecontact.xml
@@ -76,7 +76,7 @@
                     android:layout_width="0dp"
                     android:maxLength="15"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
+                    android:inputType="textPersonName|textCapWords"
                     android:ems="10"
                     android:id="@+id/first_name_edit_text" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -88,7 +88,7 @@
                     android:text="@={viewModel.secondNameText}"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
+                    android:inputType="textPersonName|textCapWords"
                     android:ems="10"
                     android:maxLength="15"
                     android:id="@+id/second_name_edit_view" android:layout_marginTop="8dp"
