--- a/app/src/main/res/layout/note_dialog.xml
+++ b/app/src/main/res/layout/note_dialog.xml
@@ -10,6 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="300"
+            android:maxLines="30"
             android:hint="@string/text_here"
             android:inputType="text"
             android:autofillHints="@string/text_here">
