--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
     <data>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".presentation.listofcontacts.ContactsActivity">
@@ -29,6 +27,17 @@
                 android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar_contacts"/>
+                app:layout_constraintTop_toBottomOf="@+id/toolbar_contacts">
+        </androidx.recyclerview.widget.RecyclerView>
+        <TextView
+                android:text="@string/no_text"
+                android:layout_width="0dp"
+                android:layout_height="0dp" android:id="@+id/no_contacts_text_view"
+                android:visibility="visible" android:textAlignment="center"
+                android:background="@color/design_default_color_background"
+                app:layout_constraintEnd_toEndOf="@+id/recycler_view"
+                app:layout_constraintStart_toStartOf="@+id/recycler_view"
+                app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
+                app:layout_constraintTop_toBottomOf="@+id/view3" android:gravity="center"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
