--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -34,7 +34,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp" android:id="@+id/no_contacts_text_view"
                 android:visibility="visible" android:textAlignment="center"
-                android:background="@color/design_default_color_background"
+                android:background="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="@+id/recycler_view"
                 app:layout_constraintStart_toStartOf="@+id/recycler_view"
                 app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
